<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarActivity">

    <Button
        android:id="@+id/btnregresar3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="88dp"
        android:onClick="btnregresar3"
        android:text="@string/stregresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnaceptar3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="88dp"
        android:onClick="btnaceptar3"
        android:text="@string/staceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnregresar3"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/stmodificar"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtedad3"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtedad"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre3" />

    <EditText
        android:id="@+id/txtsemestre3"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtsemestre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtedad3" />

    <EditText
        android:id="@+id/txtnombre3"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtnombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmatricula3" />

    <EditText
        android:id="@+id/txtpromedio3"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtpromedio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsemestre3" />

    <EditText
        android:id="@+id/txtmatricula3"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtmatricula"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stactualizar" />

</android.support.constraint.ConstraintLayout>