<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarActivity">

  <TextView
      android:id="@+id/eliminar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:text="@string/steliminar"
      android:textColor="@color/black"
      android:textSize="23sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/txtmatricula4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="25dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtmatricula"
      android:importantForAutofill="no"
      android:inputType="numberSigned"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/eliminar" />

  <EditText
      android:id="@+id/txtpromedio4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtpromedio"
      android:importantForAutofill="no"
      android:inputType="numberDecimal"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtsemestre4" />

  <EditText
      android:id="@+id/txtsemestre4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtsemestre"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtedad4" />

  <EditText
      android:id="@+id/txtestado4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtestado"
      android:importantForAutofill="no"
      android:inputType="numberDecimal"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtpromedio4" />

  <EditText
      android:id="@+id/txtedad4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtedad"
      android:importantForAutofill="no"
      android:inputType="numberSigned"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtnombre4" />

  <EditText
      android:id="@+id/txtnombre4"
      android:layout_width="363dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@color/white"
      android:editable="false"
      android:ems="10"
      android:hint="@string/txtnombre"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.666"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtmatricula4" />

  <Button
      android:id="@+id/btnaceptar4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="72dp"
      android:onClick="btnaceptar4"
      android:text="@string/staceptar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btnregresar4"
      app:layout_constraintHorizontal_bias="0.362"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btnregresar4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="48dp"
      android:layout_marginBottom="72dp"
      android:onClick="btnregresar4"
      android:text="@string/stregresar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>